@@ -7,6 +7,8 @@ TBD
   socket connections
 - Fixed #27 - Px does not exit with --quit
 - Fixed #26 - Px doesn't attach to powershell console
+- Allow Px to work with pythonw.exe - console output and stdout crash
+- Fix Python 2.x crashes in quit()
 
 v0.3.0 - 2018-02-19
 - Fixed issue 9 - Added support for winkerberos to workaround pywin32 bug
